using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    public const string ANIM_IDLE = "idle";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_RUN = "run";
    public const string ANIM_THROW = "throw";
    public const string ANIM_JUMP = "jump";
    public const string ANIM_FALL = "fall";
    public const string ANIM_CLIMB = "climb";
    public const string ANIM_GLIDE = "glide";
    public const string ANIM_SLIDE = "slide";
    public const string ANIM_JUMPAT = "jumpat";
    public const string ANIM_ATTACKSKILL = "attackSkill";
    public const string ANIM_DIE = "die";
}
